# gazelle:prefix github.com/f110/sandbox
# gazelle:proto disable_global

load("@dev_f110_rules_extras//go:vendor.bzl", "go_vendor")

go_vendor(name = "vendor")

load("@dev_f110_mono//build:job.bzl", "job")

job(
    name = "test_all",
    all_revision = True,
    command = "test",
    github_status = True,
    targets = "//...",
    cpu_limit = "300m",
    exclusive = True,
    schedule = "*/10 * * * *"
)

job(
    name = "release",
    command = "build",
    targets = "//...",
    type = "release",
    cpu_limit = "300m",
)